--- a/masterytrack/index.html
+++ b/masterytrack/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/src-tauri/icons/32x32.png" />
+    <link rel="apple-touch-icon" href="/src-tauri/icons/128x128.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>masterytrack</title>
+    <title>MasteryTrack - 10,000 Hours to Mastery</title>
   </head>
   <body>
     <div id="root"></div>
